# CrownLink

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  SC Networking.md  changes.diff  globalconfig.h  networking_.txt  shared_common.h  types.h
.github/workflows/: cmake-single-platform.yml
.vs.bak/: VSWorkspaceState.json  cmake.db  launch.vs.json  slnx.sqlite
.vs.bak/SNPJuice/FileContentIndex/: d307b4a9-3840-43f6-9063-be9842dcb84d.vsidx  d8bc8c20-7dc6-4fbf-96c2-e55fb7ff8e05.vsidx  dc6f0034-0f81-470e-bde0-88db26fcdeba.vsidx  f1d22be4-6018-4bdc-9dea-1e8625a2da55.vsidx  f1e6b730-8c60-45f1-a450-8d2ecf8af027.vsidx
.vs.bak/SNPJuice/v17/: .wsuo  DocumentLayout.json
.vs_bak/: VSWorkspaceState.json  cmake.db  slnx.sqlite
.vs_bak/SNPJuice/FileContentIndex/: 8033855d-bbc5-4a4c-b35f-3468d436f707.vsidx  809d8fc3-ea35-44f4-8f79-e5c4d1796ffe.vsidx  a3628525-449e-4b44-8d1b-84cfcbe826cb.vsidx  c4fc1606-af8f-40b3-9bc0-4b39f18918ac.vsidx  e3188351-b181-495f-88d9-063c820ab78c.vsidx
.vs_bak/SNPJuice/v17/: .wsuo  DocumentLayout.json
CrowServe/: CMakeLists.txt  Cbor.h  CrowServe.cpp  CrowServe.h  CrowServe.hpp  CrownLinkProtocol.cpp  CrownLinkProtocol.h  CrownLinkProtocol.hpp  P2PProtocol.cpp  P2PProtocol.h  P2PProtocol.hpp  common.h
CrowServe/tests/: CMakeLists.txt  CrowServeTest.cpp  ExampleTest.cpp
MPQ/: CMakeLists.txt  CrownMPQ.cpp  CrownMPQ.h  StormLib.h  StormLibDAS.lib  StormLibRAS.lib
NetShared/: SignalMessage.h  StormTypes.h
SNP/: AdvertisementManager.cpp  AdvertisementManager.h  BWInteractions.h  CMakeLists.txt  Common.h  Config.h  CriticalSection.h  CrowServeManager.cpp  CrowServeManager.h  CrownLink.cpp  CrownLink.def  CrownLink.h  CrownLink_config.json  DLLMain.cpp  DirectIP.cpp  DirectIP.h  Ema.h  Globals.cpp  Globals.h  JuiceAgent.cpp  JuiceAgent.h  JuiceIP.cpp  JuiceManager.cpp  JuiceManager.cpp.old  JuiceManager.h  JuiceP2P.cpp  JuiceP2P.h  Logger.h  NetAddress.h  NetworkQuality.cpp  NetworkQuality.h  Output.cpp  RCc38260  ReceiveQueue.h  SNETADDR.h  SNPModule.cpp  SNPModule.def  SNPModule.h  SNPNetwork.h  Signaling.cpp  (+16 more)
SNP/Storm/: storm.h
SNP/ThQueue/: CMakeLists.txt  Logger.h  ThQueue.h  main.cpp  test_queue.cpp
SNP/Util/ThQueue/: Logger.h  test_logger.cpp
SNP/bwapi/: Output.cpp  SNPNetwork.h
SNP/bwapi/Storm/: storm.h
SNP/bwapi/Util/: Mutex.h
SNP/deprecated/: Logger.h  SyncQueue.h
SNP/include/spdlog/: tweakme.h
SNP/include/storm/: Storm.def  Storm.exp  Storm.exports  Storm.h  Storm.lib
SNP/unused/: SettingsDialog.cpp  UDPSocket.h
Server/: CMakeLists.txt  CrownLinkServer.cpp  common.h
include/: CrownLink.h
signaling/: client_test.py  server.py  turn_manager.py
